@@ -1,3 +1,12 @@
+2004-05-06  Matthias Klose  <doko@debian.org>
+
+	* include/backward/iterator.h: 	Add GPL copyright info,
+	with exception clause.
+	* include/bits/boost_concept_check.h: Likewise.
+	* include
+	* libsupc++/tinfo.h: Likewise.
+	* po/string_literals.cc: Likewise.
+	
 2004-05-03  Andreas Tobler  <a.tobler@schweiz.ch>
 
 	* acinclude.m4: Replace -W with more speaking -Wextra.
